# myclockwise

./: .gitignore  .gitmodules  DEV.md  README.md  gen_utc_offset.py  merge.sh  upload.sh
firmware/clockfaces/cw-cf-0x01/: Clockface.cpp  Clockface.h
firmware/clockfaces/cw-cf-0x01/gfx/: block.cpp  mario.cpp  mario.h
firmware/clockfaces/cw-cf-0x05/: CMakeLists.txt  Clockface.cpp  Clockface.h  assets.h
firmware/clockfaces/cw-cf-0x07/: CMakeLists.txt  Clockface.cpp
firmware/clockfaces/island/: CMakeLists.txt  Clockface.cpp  Clockface.h
firmware/clockfaces/island/gfx/: assets.h  block.cpp  block.h  hero.cpp  hero.h
firmware/clockfaces/island/resource/: build_number.py  conv_to_c_array.py
firmware/lib/cw-commons/: AudioHelper.h  ButtonController.h  CMakeLists.txt  CWDateTime.cpp  CWDateTime.h  CWPreferences.h  CWWebServer.h  ChatController.h  CommandController.h  DisplayController.h  I2SController.h  IClockface.cpp  IClockface.h  RecordController.h  SettingsWebPage.h  StatusController.h  TzOffsetHelper.h  WiFiController.h  main.h
firmware/lib/cw-gfx-engine/: EventBus.cpp
firmware/src/: main.cpp
main/: CMakeLists.txt  Kconfig.projbuild
web/: index.html  manifest.json
